class AnnotationParameter {
  final String name;
  final String type;
  final Object value;
  final bool isNull;
  AnnotationParameter({
    this.name,
    this.type,
    this.value,
    this.isNull,
  });
}
